# CoffeeScale

./: CMakeLists.txt  hx711.c  hx711.h  main.c  main.cbak
